# icfpc-2013

haskell/: Evaluator.hs  Interfaces.hs  Main.hs  Trees.hs  output.026Gj66OGS3ZPvLyQokQEnSZ  output.right
samples/: myproblems.json
server/: CMakeLists.txt  expr.cpp  expr.h  generator.cpp  generator.h  main.cpp  output.026Gj66OGS3ZPvLyQokQEnSZ
server/vm/: environment.cpp  environment.h  ioobject.cpp  weak_object.cpp  weak_object.h
